--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"clean": "rimraf dist *.tgz *.zip",
 		"build": "run-p build:*",
 		"build:dev": "rollup --config rollup.config.js",
-		"build:dts": "tsc --project src/tsconfig-dts.json",
+		"build:dts": "tsc --project tsconfig-dts.json",
 		"build:prod": "rollup --config rollup.config.js --environment BUILD:production",
 		"format": "run-p format:*",
 		"format:scss": "prettier --parser scss --write \"src/sass/**/*.scss\"",
@@ -42,6 +42,7 @@
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"mocha": "^10.2.0",
 		"npm-run-all": "^4.1.5",
 		"onchange": "^7.1.0",
 		"postcss": "^8.2.6",
