--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"prepare": "run-s clean build",
 		"prepublishOnly": "npm test",
 		"start": "npm run watch",
-		"test": "eslint --ext .ts \"src/**/*.ts\"",
+		"test": "ts-mocha src/**/*-test.ts",
+		"test:coverage": "nyc --include \"src/**/*\" --reporter=html --reporter=text npm test",
 		"assets": "run-s clean build assets:version assets:zip",
 		"assets:version": "node scripts/assets-append-version.js",
 		"assets:zip": "zip -x \"*types*\" -j -r $(cat package.json | npx json name)-$(cat package.json | npx json version).zip dist",
@@ -30,11 +31,14 @@
 		"watch:ts": "onchange --initial --kill \"src/**/*.ts\" -- rollup --config rollup.config.js"
 	},
 	"devDependencies": {
+		"@istanbuljs/nyc-config-typescript": "^1.0.2",
 		"@rollup/plugin-alias": "^3.1.2",
 		"@rollup/plugin-node-resolve": "^13.0.0",
 		"@rollup/plugin-replace": "^2.4.1",
 		"@rollup/plugin-typescript": "^8.2.0",
 		"@tweakpane/core": "^1.1.4",
+		"@types/jsdom": "^21.1.1",
+		"@types/mocha": "^10.0.1",
 		"@typescript-eslint/eslint-plugin": "^4.15.2",
 		"@typescript-eslint/parser": "^4.15.2",
 		"autoprefixer": "^10.2.4",
@@ -42,8 +46,12 @@
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"install": "^0.13.0",
+		"jsdom": "^22.1.0",
 		"mocha": "^10.2.0",
+		"npm": "^9.6.7",
 		"npm-run-all": "^4.1.5",
+		"nyc": "^15.1.0",
 		"onchange": "^7.1.0",
 		"postcss": "^8.2.6",
 		"prettier": "2.8.8",
@@ -52,6 +60,7 @@
 		"rollup-plugin-cleanup": "^3.2.1",
 		"rollup-plugin-terser": "^7.0.2",
 		"sass": "^1.49.9",
+		"ts-mocha": "^10.0.0",
 		"typescript": "^4.1.5"
 	},
 	"peerDependencies": {
