feat: Adding release script

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"build:dev": "rollup --config rollup.config.js",
 		"build:dts": "tsc --project tsconfig-dts.json",
 		"build:prod": "rollup --config rollup.config.js --environment BUILD:production",
+		"release": "release-it",
 		"format": "run-p format:*",
 		"format:scss": "prettier --parser scss --write \"src/sass/**/*.scss\"",
 		"format:ts": "eslint --ext .ts --fix \"src/**/*.ts\"",
@@ -55,6 +56,7 @@
 		"onchange": "^7.1.0",
 		"postcss": "^8.2.6",
 		"prettier": "2.8.8",
+		"release-it": "^15.10.5",
 		"rimraf": "^3.0.2",
 		"rollup": "^2.39.1",
 		"rollup-plugin-cleanup": "^3.2.1",
