fix: Updating package.json information.

--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
 	"name": "tweakpane-plugin-file-import",
 	"version": "0.1.1",
 	"description": "A general-purpose and simple file input Tweakpane plugin",
+	"homepage": "http://lisperator.net/uglifyjs",
 	"main": "dist/tweakpane-plugin-file-import.js",
 	"types": "dist/types/index.d.ts",
 	"author": "LuchoTurtle",
 	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/LuchoTurtle/tweakpane-plugin-file-import"
+	},
 	"files": [
 		"dist"
 	],
