--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tweakpane-plugin-file-import",
-	"version": "0.1.4",
+	"version": "1.0.0",
 	"description": "A general-purpose and simple file input Tweakpane plugin",
 	"homepage": "https://github.com/LuchoTurtle/tweakpane-plugin-file-import",
 	"main": "dist/tweakpane-plugin-file-import.js",
@@ -17,59 +17,51 @@
 	"scripts": {
 		"prepare": "run-s clean build",
 		"prepublishOnly": "npm test",
-		"start": "npm run watch",
+		"start": "run-p watch server",
 		"test": "eslint --ext .ts \"src/**/*.ts\"",
 		"assets": "run-s clean build assets:version assets:zip",
 		"assets:version": "node scripts/assets-append-version.js",
-		"assets:zip": "zip -x \"*types*\" -j -r $(cat package.json | npx json name)-$(cat package.json | npx json version).zip dist",
+		"assets:zip": "zip -x '*types*' -j -r $(node scripts/dist-name.js)-$(cat package.json | npx json version).zip dist",
 		"clean": "rimraf dist *.tgz *.zip",
 		"build": "run-p build:*",
 		"build:dev": "rollup --config rollup.config.js",
 		"build:dts": "tsc --project tsconfig-dts.json",
 		"build:prod": "rollup --config rollup.config.js --environment BUILD:production",
-		"release": "release-it",
 		"format": "run-p format:*",
 		"format:scss": "prettier --parser scss --write \"src/sass/**/*.scss\"",
 		"format:ts": "eslint --ext .ts --fix \"src/**/*.ts\"",
+		"server": "http-server -c-1 -o /test/browser.html",
 		"watch": "run-p watch:*",
 		"watch:sass": "onchange --initial --kill \"src/sass/**/*.scss\" -- npm run build:dev",
 		"watch:ts": "onchange --initial --kill \"src/**/*.ts\" -- rollup --config rollup.config.js"
 	},
 	"devDependencies": {
-		"@istanbuljs/nyc-config-typescript": "^1.0.2",
-		"@rollup/plugin-alias": "^5.0.1",
-		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-alias": "^3.1.2",
+		"@rollup/plugin-node-resolve": "^13.0.0",
 		"@rollup/plugin-replace": "^2.4.1",
-		"@rollup/plugin-typescript": "^11.1.5",
-		"@tweakpane/core": "^1.1.4",
-		"@types/jsdom": "^21.1.1",
-		"@types/mocha": "^10.0.1",
-		"@typescript-eslint/eslint-plugin": "^5.59.8",
-		"@typescript-eslint/parser": "^5.59.8",
+		"@rollup/plugin-typescript": "^8.2.0",
+		"@tweakpane/core": "^2.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.62.0",
+		"@typescript-eslint/parser": "^5.62.0",
 		"autoprefixer": "^10.2.4",
-		"eslint": "^8.42.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-prettier": "^5.0.1",
-		"eslint-plugin-simple-import-sort": "^10.0.0",
-		"install": "^0.13.0",
-		"jsdom": "^23.0.1",
-		"mocha": "^10.2.0",
-		"npm": "^10.2.4",
+		"eslint": "^8.46.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"http-server": "^14.1.1",
 		"npm-run-all": "^4.1.5",
-		"nyc": "^15.1.0",
 		"onchange": "^7.1.0",
 		"postcss": "^8.2.6",
-		"prettier": "3.1.0",
-		"release-it": "^17.0.0",
+		"prettier": "^2.2.1",
 		"rimraf": "^3.0.2",
 		"rollup": "^2.39.1",
 		"rollup-plugin-cleanup": "^3.2.1",
 		"rollup-plugin-terser": "^7.0.2",
 		"sass": "^1.49.9",
-		"ts-mocha": "^10.0.0",
-		"typescript": "^5.3.2"
-	},
-	"peerDependencies": {
-		"tweakpane": "^3.1.4"
-	}
+		"tweakpane": "^4.0.0",
+		"typescript": "^4.9.5"
+	  },
+	  "peerDependencies": {
+		"tweakpane": "^4.0.0"
+	  }
 }
