--- a/package.json
+++ b/package.json
@@ -41,18 +41,18 @@
 		"@rollup/plugin-replace": "^2.4.1",
 		"@rollup/plugin-typescript": "^8.2.0",
 		"@tweakpane/core": "^2.0.1",
-		"@typescript-eslint/eslint-plugin": "^5.62.0",
-		"@typescript-eslint/parser": "^5.62.0",
+		"@typescript-eslint/eslint-plugin": "^6.14.0",
+		"@typescript-eslint/parser": "6.14.0",
 		"autoprefixer": "^10.2.4",
 		"eslint": "^8.46.0",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.0.1",
+		"eslint-plugin-simple-import-sort": "^10.0.0",
 		"http-server": "^14.1.1",
 		"npm-run-all": "^4.1.5",
 		"onchange": "^7.1.0",
 		"postcss": "^8.2.6",
-		"prettier": "^2.2.1",
+		"prettier": "^3.1.1",
 		"rimraf": "^3.0.2",
 		"rollup": "^2.39.1",
 		"rollup-plugin-cleanup": "^3.2.1",
