--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"prepare": "run-s clean build",
 		"prepublishOnly": "npm test",
 		"start": "run-p watch server",
-		"test": "eslint --ext .ts \"src/**/*.ts\"",
+		"test": "eslint \"src/**/*.ts\"",
 		"assets": "run-s clean build assets:version assets:zip",
 		"assets:version": "node scripts/assets-append-version.js",
 		"assets:zip": "zip -x '*types*' -j -r $(node scripts/dist-name.js)-$(cat package.json | npx json version).zip dist",
@@ -30,7 +30,7 @@
 		"build:prod": "rollup --config rollup.config.js --environment BUILD:production",
 		"format": "run-p format:*",
 		"format:scss": "prettier --parser scss --write \"src/sass/**/*.scss\"",
-		"format:ts": "eslint --ext .ts --fix \"src/**/*.ts\"",
+		"format:ts": "eslint --fix \"src/**/*.ts\"",
 		"server": "http-server -c-1 -o /test/browser.html",
 		"watch": "run-p watch:*",
 		"watch:sass": "onchange --initial --kill \"src/sass/**/*.scss\" -- npm run build:dev",
@@ -39,29 +39,28 @@
 	"devDependencies": {
 		"@rollup/plugin-alias": "^5.1.0",
 		"@rollup/plugin-node-resolve": "^15.2.3",
-		"@rollup/plugin-replace": "^5.0.5",
-		"@rollup/plugin-typescript": "^11.1.5",
+		"@rollup/plugin-replace": "^5.0.7",
+		"@rollup/plugin-typescript": "^11.1.6",
 		"@tweakpane/core": "^2.0.1",
-		"@typescript-eslint/eslint-plugin": "^6.14.0",
-		"@typescript-eslint/parser": "6.20.0",
+		"@typescript-eslint/eslint-plugin": "^8.5.0",
+		"@typescript-eslint/parser": "^8.5.0",
 		"autoprefixer": "^10.2.4",
-		"eslint": "^8.46.0",
+		"eslint": "^9.10.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-prettier": "^5.0.1",
-		"eslint-plugin-simple-import-sort": "^12.0.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"http-server": "^14.1.1",
 		"npm-run-all": "^4.1.5",
 		"onchange": "^7.1.0",
-		"postcss": "^8.2.6",
-		"prettier": "^3.1.1",
-		"release-it": "^17.0.0",
-		"rimraf": "^5.0.5",
+		"postcss": "^8.4.45",
+		"prettier": "^3.3.3",
+		"release-it": "^17.6.0",
+		"rimraf": "^6.0.1",
 		"rollup": "^2.39.1",
-		"rollup-plugin-cleanup": "^3.2.1",
+		"rollup-plugin-cleanup": "3.2.1",
 		"rollup-plugin-terser": "^7.0.2",
-		"sass": "^1.49.9",
-		"tweakpane": "^4.0.0",
-		"typescript": "^5.3.3"
+		"sass": "^1.78.0",
+		"typescript": "^5.6.2"
 	},
 	"peerDependencies": {
 		"tweakpane": "^4.0.0"
