--- a/package.json
+++ b/package.json
@@ -37,16 +37,18 @@
 		"watch:ts": "onchange --initial --kill \"src/**/*.ts\" -- rollup --config rollup.config.js"
 	},
 	"devDependencies": {
+		"@eslint/eslintrc": "^3.0.0",
+		"@eslint/js": "^10.0.0",
 		"@rollup/plugin-alias": "^5.1.0",
 		"@rollup/plugin-node-resolve": "^16.0.0",
 		"@rollup/plugin-replace": "^6.0.1",
 		"@rollup/plugin-typescript": "^12.1.0",
 		"@tweakpane/core": "^2.0.1",
-		"@typescript-eslint/eslint-plugin": "^8.5.0",
-		"@typescript-eslint/parser": "^8.5.0",
+		"@typescript-eslint/eslint-plugin": "^8.56.1",
+		"@typescript-eslint/parser": "^8.56.1",
 		"autoprefixer": "^10.2.4",
-		"eslint": "^9.10.0",
-		"eslint-config-prettier": "^10.0.1",
+		"eslint": "^10.0.1",
+		"eslint-config-prettier": "^10.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
 		"eslint-plugin-simple-import-sort": "^12.1.1",
 		"http-server": "^14.1.1",
