--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"compilerOptions": {
 		"lib": ["DOM", "ES2015"],
-		"moduleResolution": "Node",
+		"module": "ESNext",
+		"moduleResolution": "bundler",
 		"strict": true,
 		"target": "ES6"
 	}
