--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.1.1",
 	"description": "A general-purpose and simple file input Tweakpane plugin",
 	"homepage": "https://github.com/LuchoTurtle/tweakpane-plugin-file-import",
+	"type": "module",
 	"main": "dist/tweakpane-plugin-file-import.js",
 	"types": "dist/types/index.d.ts",
 	"author": "LuchoTurtle",
@@ -39,10 +40,10 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.0.0",
 		"@eslint/js": "^10.0.0",
-		"@rollup/plugin-alias": "^5.1.0",
-		"@rollup/plugin-node-resolve": "^16.0.0",
-		"@rollup/plugin-replace": "^6.0.1",
-		"@rollup/plugin-typescript": "^12.1.0",
+		"@rollup/plugin-alias": "6.0.0",
+		"@rollup/plugin-node-resolve": "^16.0.3",
+		"@rollup/plugin-replace": "^6.0.3",
+		"@rollup/plugin-typescript": "^12.3.0",
 		"@tweakpane/core": "^2.0.1",
 		"@typescript-eslint/eslint-plugin": "^8.56.1",
 		"@typescript-eslint/parser": "^8.56.1",
@@ -58,9 +59,9 @@
 		"prettier": "^3.3.3",
 		"release-it": "^19.0.1",
 		"rimraf": "^6.0.1",
-		"rollup": "^2.39.1",
+		"@rollup/plugin-terser": "^0.4.4",
+		"rollup": "^4.59.0",
 		"rollup-plugin-cleanup": "3.2.1",
-		"rollup-plugin-terser": "^7.0.2",
 		"sass": "^1.97.3",
 		"typescript": "^5.9.3"
 	},
