--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,18 +2,17 @@ name: PR CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, latest]
+        node-version: [18.x, 20.x, 22.x, 24.x, latest]
 
     steps:
       - uses: actions/checkout@v3
@@ -21,8 +20,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          
+
       - run: npm install
       - run: npm run build --if-present
       - run: npm test
-  
