feat: Drop support for Node 18.x.  Fix warnings when building.

--- a/package.json
+++ b/package.json
@@ -67,5 +67,9 @@
 	},
 	"peerDependencies": {
 		"tweakpane": "^4.0.0"
+	},
+	"overrides": {
+		"magic-string": "^0.30.0",
+		"html-encoding-sniffer": "^6.0.0"
 	}
 }
